tests/NormalTests/paczka1/fuzzy1/86285888.err
Error in line 1: aaeYavw S36 95,0
Error in line 10: aaeYavw S78 49,1
Error in line 14: 4zRXV A95 41,6
Error in line 26: 5mmwZVbGA5 S78 32,8
Error in line 36: 5mmwZVbGA5 A95 75,7
